# GL-Adventures

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.hpp
include/glad/: glad.h
lib/: glad.c
shaders/: fragment.glsl  vertex.glsl
src/: Camera.cpp  main.cpp
